[project]
name = "skimtoken-benchmark"
version = "0.1.0"
description = "Measure the performance of skimtoken."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
    "skimtoken==0.2.2",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
